set shrink-to-fit to no and scene height to 100vh to solve the issue of resizing problem on mobile devices.

--- a/css/general.css
+++ b/css/general.css
@@ -8,7 +8,7 @@ body {
 
 body,
 html {
-  height: 100%;
+  height: 100vh;
   width: 100%;
   margin: 0;
   padding: 0;
@@ -181,14 +181,14 @@ ul ul a {
 }
 
 .scene {
-  height: 100%;
+  height: 100vh;
   width: 100%;
   position: relative;
   text-align: center;
 }
 
 .firstScene {
-  height: 100%;
+  height: 100vh;
   width: 100%;
   position: relative;
   text-align: center;
